# article_backend

./: Attack.md  BitPin.openapi.yaml  README.md  docker-compose.yml
articles/: Dockerfile  attack_script.py  entrypoint.sh  pyproject.toml  requirements.txt
articles/articles/: celery.py  settings.py
articles/main/: admin.py  models.py  serializers.py  services.py  tasks.py  urls.py  utils.py  views.py
articles/main/migrations/: 0001_initial.py  0002_alter_vote_vote.py  0003_article_created_at_article_updated_at.py  0004_article_avg_scores_article_number_of_scores.py  0005_remove_article_text_vote_created_at_vote_updated_at_and_more.py  0006_rename_vote_vote_score.py  0007_vote_disable_unitll_vote_is_disable.py
